# GuideArch

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  conformance-divergence.md  feature.md  question.md
.github/workflows/: conformance.yml  csharp.yml  python.yml  release.yml  spec.yml  typescript.yml  vmx-bump.yml
.superpowers/sdd/: task-2-report.md
docs/: contract-ledger.md
docs/design/: 2026-05-29-guidearch-rewrite-design.md
docs/plans/: 2026-05-30-m0-repo-bootstrap.md
docs/superpowers/plans/: 2026-07-02-vmx-3-1-refactor-audit.md
docs/superpowers/specs/: 2026-07-02-vmx-3-1-refactor-audit-design.md  2026-07-02-vmx-3-1-refactor-audit-report.md
docs/superpowers/specs/vmx-3-1-audit/: baseline.md  current-usage.md  loc-baseline.txt  replacement-ledger.md  test-impact.md  vmx-3-1-capabilities.md
langs/csharp/: Directory.Build.props  GuideArch.sln  README.md
langs/csharp/src/GuideArch.Conformance/: GuideArch.Conformance.csproj  Program.cs
langs/csharp/src/GuideArch.Models/: AlternativeM.cs  CandidateM.cs  CoefficientM.cs  ConfigM.cs  ConstraintM.cs  CriticalConstraintM.cs  CriticalDecisionM.cs  DecisionM.cs  GuideArch.Models.csproj  HelloVmx.cs  NormalizedFuzzyM.cs  PropertyM.cs  ScenarioLoader.cs  ScenarioM.cs  ScenarioValidationException.cs  TriangularFuzzyM.cs
langs/csharp/src/GuideArch.View/: App.axaml  App.axaml.cs  Converters.cs  GuideArch.View.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SampleScenarios.cs  app.manifest
langs/csharp/src/GuideArch.ViewModels/: AlternativeVMFactory.cs  AppState.cs  AppVMFactory.cs  CandidateVMFactory.cs  ChartData.cs  CoefficientVMFactory.cs  ConstraintVMFactory.cs  CriticalConstraintVMFactory.cs  CriticalDecisionVMFactory.cs  DecisionVMFactory.cs  GuideArch.ViewModels.csproj  HelloVmxVMFactory.cs  PropertyVMFactory.cs  ScenarioMutationException.cs  ScenarioSerializer.cs  ScenarioState.cs  ScenarioVMFactory.cs
langs/csharp/tests/GuideArch.Models.Tests/: ConformanceTests.cs  GuideArch.Models.Tests.csproj  ScenarioLoaderTests.cs  SolveMinimalTests.cs  TriangularFuzzyMTests.cs
langs/csharp/tests/GuideArch.ViewModels.Tests/: AppVMTests.cs  ChartDataTests.cs  ChartThemeTests.cs  DialogScrimCancelTests.cs  DialogStyleTests.cs  DiscardConfirmTests.cs  EditorCascadesTests.cs  EmptyStateTests.cs  GuideArch.ViewModels.Tests.csproj  InputFocusStyleTests.cs  SaveRoundtripTests.cs  ScenarioVMTests.cs  SectionHeaderTests.cs  SelectionStateTests.cs  SolveButtonStyleTests.cs  TabStripStyleTests.cs  TableStyleTests.cs  ThemeDictionaryTests.cs  ToolbarMarkupTests.cs  VMMvvmIntegrationTests.cs  VMTreeComprehensiveTests.cs  VMTreeTests.cs
langs/csharp/tools/screenshot-all-tabs/: Program.cs  screenshot-all-tabs.csproj
langs/python/: Dockerfile  README.md  pyproject.toml
langs/python/src/guidearch/: __init__.py  hello_vmx.py  main.py
langs/python/src/guidearch/conformance/: __init__.py  runner.py
langs/python/src/guidearch/models/: __init__.py  alternative.py  candidate.py  coefficient.py  constraint.py  critical_constraint.py  critical_decision.py  decision.py  normalized_fuzzy.py  property.py  scenario.py  scenario_loader.py  triangular_fuzzy.py
langs/python/src/guidearch/models/topsis/: __init__.py  critical_constraints.py  critical_decisions.py  solve.py
langs/python/src/guidearch/output/: __init__.py  cli.py  serialize.py
langs/python/src/guidearch/samples/: __init__.py
langs/python/src/guidearch/view/: __init__.py  chart_data.py  theme.py
langs/python/src/guidearch/view/adapters/: __init__.py  vmx_to_nicegui.py
langs/python/src/guidearch/viewmodels/: __init__.py  alternative_vm.py  app_vm.py  candidate_vm.py  coefficient_vm.py  constraint_vm.py  critical_constraint_vm.py  critical_decision_vm.py  decision_vm.py  property_vm.py  scenario_vm.py
langs/python/tests/: __init__.py
langs/python/tests/conformance/: __init__.py  test_conformance.py
langs/python/tests/integration/: test_vm_tree_comprehensive.py
langs/python/tests/unit/: __init__.py  test_app_vm.py  test_chart_comparison.py  test_chart_data.py  test_chart_theme.py  test_chart_theme_refresh.py  test_confirm_dialog.py  test_editor_cascades.py  test_empty_state.py  test_hero_illustration.py  test_results_subtabs.py  test_save_roundtrip.py  test_scenario_loader.py  test_scenario_vm.py  test_section_header.py  test_selection_state.py  test_solve_minimal.py  test_solve_style.py  test_table_polish.py  test_theme.py  test_toolbar.py  test_triangular_fuzzy.py  test_vm_mvvm.py  test_vm_tree.py  test_vmx31_command_compat.py  test_vmx_to_nicegui_adapter.py
langs/python/tests/visual/: snapshot_all_tabs.py
langs/typescript/: .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.config.ts
langs/typescript/src/: app.css  app.html
langs/typescript/src-tauri/: Cargo.toml  tauri.conf.json
langs/typescript/src-tauri/src/: lib.rs  main.rs
langs/typescript/src/conformance/: runner.ts
langs/typescript/src/lib/: hello-vmx.ts
langs/typescript/src/models/: alternative.ts  candidate.ts  coefficient.ts  config.ts  constraint.ts  critical-constraint.ts  critical-decision.ts  decision.ts  index.ts  normalized-fuzzy.ts  (+4 more)
spec/: README.md  charts.md  design-system.md  editors.md  release.md  viewmodels.md
spec/ADRs/: 0001-three-impls-vmx-submodule.md  0002-json-schema-not-xml.md  0003-topsis-no-msf.md  0004-mit-license.md  0005-single-monorepo-version.md  0006-nicegui-over-shiny.md
spec/algorithms/: critical-constraints.md  critical-decisions.md  topsis.md
spec/conformance/: tolerances.json
spec/conformance/expected/: eds.candidates.json  eds.critical-constraints.json  eds.critical-decisions.json  sas.candidates.json  sas.critical-constraints.json  sas.critical-decisions.json
spec/conformance/scenarios/: eds.json
spec/domain/: glossary.md  invariants.md
tools/: import-legacy-xml.py  use-vmx-local.sh  use-vmx-released.sh
(+74 files in other folders)
