[project]
name = "guidearch"
version = "1.0.0"
description = "GuideArch — Python + NiceGUI implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
dependencies = [
    "nicegui>=3.0.0",
    "numpy>=1.26",
    "pywebview>=5.0",
    "vmx>=2.1.0",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.scripts]
guidearch = "guidearch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guidearch"]
# JSON sample files are automatically included as package data by hatchling.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# NiceGUI ships py.typed but mypy may not find it when run outside the venv.
# The untyped-decorator error from @ui.page is suppressed the same way.
module = "nicegui"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# jsonschema stubs are not bundled; suppress the untyped-import warning.
module = "jsonschema"
ignore_missing_imports = true

[tool.uv.sources]
# Use the vendored VMx by default. Toggle to released via tools/use-vmx-released.sh.
vmx = { path = "../../vendor/vmx/langs/python", editable = true }

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]
