[project]
name = "guidearch"
version = "1.0.0"
description = "GuideArch — Python + NiceGUI implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
dependencies = [
    "nicegui>=3.0.0",
    "numpy>=1.26",
    "pywebview>=5.0",
    "vmx>=2.1.0",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
# Unit-test, lint, and type-check tooling. Installed via `pip install -e .[dev]`
# or, in this repo's workflow, automatically by `uv sync --all-extras`.
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.6",
]

[project.scripts]
guidearch = "guidearch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guidearch"]
# JSON sample files are automatically included as package data by hatchling.

[tool.hatch.build.targets.wheel.force-include]
# Ship spec/domain/scenario.schema.json *inside* the wheel as
# guidearch/_data/scenario.schema.json so `pip install guidearch` works
# stand-alone. The repo-root walk in scenario_loader._load_default_schema()
# fails after a wheel install (site-packages/guidearch/.../parents[5] is /),
# so the package-data path is the only one that resolves outside this repo.
"../../spec/domain/scenario.schema.json" = "guidearch/_data/scenario.schema.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/guidearch/**",
    "../../spec/domain/scenario.schema.json",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# NiceGUI ships py.typed but mypy may not find it when run outside the venv.
# The untyped-decorator error from @ui.page is suppressed the same way.
module = "nicegui"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# jsonschema stubs are not bundled; suppress the untyped-import warning.
module = "jsonschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# playwright lives in [dependency-groups].visual and is only installed for
# the manual visual-snapshot workflow. CI runs `uv sync --all-extras` which
# does not install it, so mypy must tolerate the missing import.
module = "playwright.sync_api"
ignore_missing_imports = true

[tool.uv.sources]
# Use the vendored VMx by default. Toggle to released via tools/use-vmx-released.sh.
vmx = { path = "../../vendor/vmx/langs/python", editable = true }

[dependency-groups]
# Browser-automation tooling for visual snapshot tests (tests/visual/). Distinct
# from [project.optional-dependencies].dev: that one installs by default with
# uv sync --all-extras; this one only installs on uv sync --group visual,
# avoiding the multi-hundred-MB chromium download on most workflows.
visual = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]
