[project]
name = "guidearch"
version = "1.0.0"
description = "GuideArch — Python + NiceGUI implementation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kaveh Razavi", email = "kaveh.razavi@gmail.com" }]
dependencies = [
    "nicegui>=3.13.0",
    "pywebview>=5.0",
    "vmx>=2.6.0",
    "jsonschema>=4.23",
    "platformdirs>=4.0",
    # Direct dependency: VM observables are consumed via reactivex in
    # viewmodels/ and view/adapters/, not only transitively through vmx.
    "reactivex>=4.0.4",
]

[project.optional-dependencies]
# Unit-test, lint, and type-check tooling. Installed via `pip install -e .[dev]`
# or, in this repo's workflow, automatically by `uv sync --all-extras`.
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.15.18",
]

[project.scripts]
guidearch = "guidearch.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guidearch"]
# JSON sample files + the bundled scenario.schema.json under _data/ are
# automatically included as package data by hatchling. The schema is a
# committed copy of spec/domain/scenario.schema.json; .github/workflows/
# spec.yml CI-gates the two files against each other to catch drift, the
# same pattern used for langs/typescript/src/samples/scenario.schema.json.
#
# Previously this project used `[tool.hatch.build.targets.wheel.force-include]`
# to pull the schema in from `../../spec/...`, but the relative path is
# resolved against the project root inside hatchling's sdist build dir
# where `../../spec/` does not exist — `uv build` failed with
# 'Forced include not found'. Committing a synchronised copy keeps both
# `uv build --wheel` and the full `uv build` (wheel+sdist) green.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# NiceGUI ships py.typed but mypy may not find it when run outside the venv.
# The untyped-decorator error from @ui.page is suppressed the same way.
module = "nicegui"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# jsonschema stubs are not bundled; suppress the untyped-import warning.
module = "jsonschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# playwright lives in [dependency-groups].visual and is only installed for
# the manual visual-snapshot workflow. CI runs `uv sync --all-extras` which
# does not install it, so mypy must tolerate the missing import.
module = "playwright.sync_api"
ignore_missing_imports = true

[tool.uv.sources]
# PyPI is the default source for vmx (see [project.dependencies] above). The
# editable submodule entry below is commented out so a plain `uv sync` resolves
# vmx from PyPI. For co-developing VMx alongside GuideArch, tools/use-vmx-local.sh
# uncomments it (and re-locks editable); tools/use-vmx-released.sh re-comments it.
# vmx = { path = "../../vendor/vmx/langs/python", editable = true }

[dependency-groups]
# Browser-automation tooling for visual snapshot tests (tests/visual/). Distinct
# from [project.optional-dependencies].dev: that one installs by default with
# uv sync --all-extras; this one only installs on uv sync --group visual,
# avoiding the multi-hundred-MB chromium download on most workflows.
visual = [
    "playwright>=1.60.0",
    "pytest-playwright>=0.8.0",
]
